Update and rename main_page.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Кот Келпи</h1>
     <nav>
-      <a href="main_page.html"><strong>Главная</strong></a> |
+      <a href="index.html"><strong>Главная</strong></a> |
       <a href="about.html">О чем игра?</a> |
       <a href="diary.html">Журнал Келпи</a> |
       <a href="work_proc.html">История создания</a> |
