--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header>
     <h1>Кот Келпи</h1>
     <nav>
-      <a href="main_page.html">Главная</a> |
+      <a href="index.html">Главная</a> |
       <a href="about.html"><strong>О чем игра?</strong></a> |
       <a href="diary.html">Журнал Келпи</a> |
       <a href="work_proc.html">История создания</a> |
