--- a/diary.html
+++ b/diary.html
@@ -9,7 +9,7 @@
      <header>
     <h1>Кот Келпи</h1>
     <nav>
-      <a href="main_page.html">Главная</a> |
+      <a href="index.html">Главная</a> |
       <a href="about.html">О чем игра?</a> |
       <a href="diary.html"><strong>Журнал Келпи</strong></a> |
       <a href="work_proc.html">История создания</a> |
