--- a/exes.html
+++ b/exes.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-
+<a href="main_page.html"><strong>Главная</strong></a>
 <h1>Определение числа</h1>
 <p>Введите вещественное число:</p>
 <input type="number" step="any" id="numberInput" placeholder="Например: 3.14">
