--- a/pasport.html
+++ b/pasport.html
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-    <a href="main_page.html"><strong>Главная</strong></a>
+    <a href="index.html"><strong>Главная</strong></a>
   <div class="passport">
     <img src="images/8ccbcba24253a9b7ac5b1a4b5db595c4.jpg" alt="Паспорт">
     <p class="surname"> <span>Ласкина</span></p>
