--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <section>
   <h3>Скриншоты</h3>
-  <a href="images/IMG_4905.png" target="_blank">
-    <img src="images/IMG_4905.png" alt="Кот на причале" width="100">
+  <a href="images/IMG_4905.PNG" target="_blank">
+    <img src="images/IMG_4905.PNG" alt="Кот на причале" width="100">
   </a>
-  <a href="images/IMG_4907.png" target="_blank">
+  <a href="images/IMG_4907.PNG" target="_blank">
     <img src="images/IMG_4907.PNG" alt="Ловля рыбы" width="100">
   </a>
 </section>
